# Tetris

./: .gitignore  Arcade.sln  CMakeLists.txt  README.md
Arcade/: Arcade.vcxproj  Board.cpp  Board.h  Button.cpp  Button.h  Game.cpp  Game.h  NetworkHandler.cpp  NetworkHandler.h  Tetromino.cpp  Tetromino.h  client.py  main.cpp  pixelizer.fs  scanlines.fs
Controls/: Controls.cpp  Controls.h
P2P/: basicBitcClient.py  client.c  client.py  echo server.py  game_logic.py  ladyboycounter.py  nonBlockingClientSample.cpp  protocols.py  server.py  setup.py  shittyClient.py  shittyServer.py  utlis.py
P3P/: nonBlockingClientSample.cpp  sampleClient.cpp
P3P/testing_purposes/: client.py  client2.py  server.py
